fix - Make the text color support dark mode

--- a/src/renderer/components/NewTaskInput/style.module.scss
+++ b/src/renderer/components/NewTaskInput/style.module.scss
@@ -19,6 +19,7 @@
     outline: none;
     background-color: transparent;
     font-size: 14px;
+    color: var(--td-text-color-primary);
   }
   .placeholder {
     position: absolute;
